--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -5,3 +5,4 @@ $Dark-grayish-cyan1: hsl(184, 14%, 56%);
 $Light-grayish-cyan: hsl(185, 41%, 84%);
 $Light-grayish-cyan1: hsl(189, 41%, 97%);
 $White: hsl(0, 0%, 100%);
+$Red: #ea5b5b;
